@@ -9,13 +9,11 @@ import de.gwdg.metadataqa.marc.model.validation.ErrorsCollector;
 import de.gwdg.metadataqa.marc.utils.keygenerator.DataFieldKeyGenerator;
 
 import java.io.Serializable;
-import java.util.Collections;
+import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.logging.Logger;
-
-import static de.gwdg.metadataqa.marc.model.validation.ValidationErrorType.*;
 
 public class MarcSubfield implements Serializable { // Validatable
 
@@ -130,13 +128,16 @@ public class MarcSubfield implements Serializable { // Validatable
       prefixCache = new HashMap<>();
     }
 
-    String cacheKey = String.format("%s$%s-%s-%s", this.getField().getTag(), code, keyGenerator.getType().getType(), keyGenerator.getMarcVersion());
+    String tag = this.getField().getTag();
+    if (this.getField().getOccurrence() != null)
+      tag += "/" + this.getField().getOccurrence();
+    String cacheKey = String.format("%s$%s-%s-%s", tag, code, keyGenerator.getType().getType(), keyGenerator.getMarcVersion());
     if (!prefixCache.containsKey(cacheKey))
       prefixCache.put(cacheKey, keyGenerator.forSubfield(this));
     String prefix = prefixCache.get(cacheKey);
 
     Map<String, List<String>> pairs = new HashMap<>();
-    pairs.put(prefix, Collections.singletonList(resolve()));
+    pairs.put(prefix, new ArrayList<>(List.of(resolve())));
     if (getDefinition() != null) {
       getKeyValuePairsForPositionalSubfields(pairs, prefix);
       getKeyValuePairsFromContentParser(keyGenerator, pairs);
@@ -152,7 +153,7 @@ public class MarcSubfield implements Serializable { // Validatable
         for (Map.Entry<String, String> entry : extra.entrySet()) {
           pairs.put(
             keyGenerator.forSubfield(this, entry.getKey()),
-            Collections.singletonList(entry.getValue())
+            new ArrayList<>(List.of(entry.getValue()))
           );
         }
       }
@@ -163,7 +164,7 @@ public class MarcSubfield implements Serializable { // Validatable
     if (getDefinition().hasPositions()) {
       Map<String, String> extra = getDefinition().resolvePositional(getValue());
       for (Map.Entry<String, String> entry : extra.entrySet()) {
-        pairs.put(prefix + "_" + entry.getKey(), Collections.singletonList(entry.getValue()));
+        pairs.put(prefix + "_" + entry.getKey(), new ArrayList<>(List.of(entry.getValue())));
       }
     }
   }
